--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="100dp"
         android:background="@android:color/white"
@@ -31,26 +31,19 @@
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:orientation="vertical"
-            app:layout_constraintBottom_toTopOf="@+id/imageView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.13"
+            android:padding="16dp"
+            android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
             tools:ignore="MissingConstraints">
 
             <TextView
                 android:id="@+id/textView1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:layout_marginBottom="70dp"
                 android:text="@string/heading"
                 android:gravity="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textColor="#000000"
-                android:textSize="36sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@+id/textName"/>
 
@@ -65,13 +58,12 @@
                     android:id="@+id/textName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Student Name"
+                    android:ems="10"
+                    android:hint="@string/hintText"
                     android:imeOptions="actionDone"
                     android:importantForAutofill="no"
                     android:maxLines="1"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="40dp"
+                    android:minHeight="48dp"
                     app:layout_constraintBottom_toTopOf="@+id/insertButton"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"/>
@@ -85,6 +77,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:backgroundTint="#5579C6"
+                android:layout_gravity="center"
                 android:onClick="onClickAddDetails"
                 android:text="@string/insertButtontext"
                 android:textAlignment="center"
@@ -100,6 +93,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:backgroundTint="#5579C6"
+                android:layout_gravity="center"
                 android:onClick="onClickShowDetails"
                 android:text="@string/loadButtonText"
                 android:textAlignment="center"
